--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
 	id="WebApp_ID" version="3.0">
 	<display-name>Archetype Created Web Application</display-name>
 	
-	<servlet>
+	<!-- <servlet>
 	<servlet-name>dispatcher</servlet-name>
 	 <servlet-class>org.springframework.web.servlet.DispatcherServlet
 	</servlet-class>
@@ -17,7 +17,7 @@
 	</servlet-mapping>
 
 	
-	
+	 -->
 	
 	
 	
